<resources>
    <string name="text_slide_menu"></string>
    <!--<string name="app_facebook_id" translatable="false">1324953754234438</string>-->
    <!--<string name="app_facebook_id">196056637629727</string>-->
    <!--<string name="app_facebook_id" translatable="false">1870429673216047</string>-->
    <!-- <string name="app_facebook_id" translatable="false">296071404156010</string>-->
    <string name="app_facebook_id">2072679599728167</string>
    <string name="facebook_app_id">581312802242531</string>
    <string name="fb_login_protocol_scheme">fb581312802242531</string>
    <string name="app_name">Watchs</string>
    <string name="please_input_data_vi">Please fill in all information</string>
    <string name="please_check_connection">Please check your internet connection </string>
    <string name="username">The name</string>
    <string name="password2">password</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="confirm_password">password confirmation</string>
    <string name="email">Email Address</string>
    <string name="save">save</string>
    <string name="new_password_must_be_equals_confirm_new_password">Confirm password is wrong </string>
    <string name="loading">Loading</string>
    <string name="cancel">Cancel</string>
    <string name="input_correctly_form_email">Please check your email</string>
    <string name="register_success">Register success</string>
    <string name="request_server_fail">Request server fail</string>
    <string name="username_must_be_from_6_to_30_character">The name must be 6 to 30 characters</string>
    <string name="title">Title</string>
    <string name="description">Description </string>
    <string name="your_address">Address</string>
    <string name="information">Information (measurement, color, special request ...)</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="comment">Comment</string>
    <string name="register">Register</string>
    <string name="enter_email_to_get_password">Enter your email address to get your password</string>
    <string name="send_password">Send password</string>
    <string name="dont_have_an">Do not have </string>
    <string name="forgot">Forget</string>
    <string name="account">Account</string>
    <string name="login_facebook">Sign in via Facebook</string>
    <string name="send_order">Send the order</string>
    <string name="title_product">Title Product</string>
    <string name="buy">Buy</string>
    <string name="name">First Name(*)</string>
    <string name="content">Content</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="user_profile">User profile</string>
    <string name="my_shopping_cart">My shopping cart</string>
    <string name="browse_category">Browse category</string>
    <string name="my_favorite">Favorites</string>
    <string name="product_on_sale">Product on sale</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="sign_out">Sign out</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="from_camera">From the camera</string>
    <string name="from_gallery">From gallery</string>
    <string name="handmade_watch">The world of watches</string>
    <string name="likes">Likes</string>
    <string name="username_taken">This name or email is used </string>
    <string name="you_must_login">You must sign in</string>
    <string name="input_message">the message</string>
    <string name="first_name_should_not_empty">Firstname should not empty</string>
    <string name="last_name_should_not_empty">Lastname should not empty</string>
    <string name="email_should_not_empty">Email should not empty</string>
    <string name="telephone_should_not_empty">Telephone should not empty</string>
    <string name="address_should_not_empty">address_should_not_empty</string>
    <string name="country_should_not_empty">telephone_should_not_emptyيجب كتابة الدولة</string>
    <string name="region_should_not_empty">telephone_should_not_empty</string>
    <string name="password_should_not_empty">telephone_should_not_empty</string>
    <string name="region_state">Region / Governorate</string>
    <string name="confirm_password_should_not_empty">Confirm password should not empty</string>
    <string name="country">Country</string>
    <string name="post_code">Post code</string>
    <string name="city">City</string>
    <string name="address_2"> Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="company">Company</string>
    <string name="fax">Fax</string>
    <string name="telephone">Telephone</string>
    <string name="last_name">Last name</string>
    <string name="region">Region</string>
    <string name="my_account">My account</string>

    <string name="unauthorized">Unauthorized please relogin</string>

    <string name="message_contact">Message</string>
    <string name="btn_ok">Ok</string>
    <string name="alert_message_success">Add Contact Us Complete !</string>
    <string name="alert_message_fail">Add Contact Us Fail, Try Again !</string>
    <string name="empty_name">Name must not empty !</string>
    <string name="empty_email">Email must not empty !</string>
    <string name="empty_message">Message must not empty !</string>
    <string name="type_email_invalid">Email format is invalid!</string>
    <string name="comments">comments</string>
    <string name="a_like">like</string>
    <string name="btn_turn_noti">Notifications</string>
    <string name="sign_up_account">Register for an account</string>
    <string name="member_since">Member since</string>
    <string name="contact_info">Connect with us</string>
    <string name="number_phone">01669255872</string>
    <string name="number_phone3">01669255872</string>
    <string name="email_contact">luongvandonguet@gmail.com</string>
    <string name="contact_info_1">Chí Linh</string>
    <string name="contact_info_2">Hải Dương</string>
    <string name="link_face">https://www.facebook.com/profile.php?id=100004817383013</string>
    <string name="link_instagram">http://instagram.com/world.wtches</string>
    <string name="number_phone1">01669255872</string>
    <string name="number_phone2">01669255872</string>
    <string name="turn_off_toast_noti">Turn off toast notification</string>
    <string name="turn_on_toast_noti">Turn on toast notification</string>
    <string name="order_telephone">Telephone number</string>
    <string name="order_address">Address</string>
    <string name="success">Success</string>
    <string name="my_favorites">Favorites</string>
    <string name="my_shopping">My shopping</string>
    <string name="like_success">Like success</string>
    <string name="pager_bullet_separator" formatted="false">%s / %s</string>

    <string name="title_check">Title check(update the application)</string>
    <string name="message_check"> Please update the application</string>
    <string name="check_fail">Check failed, and try again</string>
</resources>
