<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsz_back"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/my_account"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/use"
                android:drawablePadding="15dp"
                android:ellipsize="start"
                android:gravity="right"
                android:hint="@string/username"
                android:padding="15dp"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textDirection="ltr" />

            <!--<EditText-->
            <!--android:drawablePadding="15dp"-->
            <!--android:drawableLeft="@drawable/key"-->
            <!--android:singleLine="true"-->
            <!--android:id="@+id/edtPassword"-->
            <!--android:gravity="right"-->
            <!--android:textCursorDrawable="@null"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textDirection="ltr"-->
            <!--android:inputType="textPassword"-->
            <!--android:hint="@string/password2"-->
            <!--android:padding="15dp" />-->
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="15dp"

                android:gravity="right"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvToRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvToForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button1"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/btnLogInfb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button2"
            android:gravity="center"
            android:text="@string/login_facebook"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btnGuestLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button1"
            android:gravity="center"
            android:text="@string/continue_without_login"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>
