<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">


            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="30dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <EditText
                        android:id="@+id/edtFirstName"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/name"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtLastName"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/last_name"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtEmail"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/email"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtTelephone"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/telephone"
                        android:inputType="phone"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtFax"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/fax"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtCompany"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/company"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtAddress"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/address_1"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtAddress2"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/address_2"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtCity"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/city"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtPostCode"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/post_code"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtCountry"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/country"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtRegion"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/region"
                        android:padding="15dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/edtPassword"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:singleLine="true" />


                    <EditText
                        android:id="@+id/edtConfirmPassword"
                        style="@style/ThemeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:singleLine="true" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/btnCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button3"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/cancel"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/btnSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button4"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/save"
                        android:textColor="@color/white" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <include layout="@layout/bottom_choose_image" />

</android.support.design.widget.CoordinatorLayout>



