<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackGroundInfoMain"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnFromCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_drawer_dark_background"
            android:text="@string/from_camera"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/material_drawer_dark_background"
            android:text="@string/from_gallery"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancelImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/material_drawer_dark_background"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>