<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsz_back"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="Forgot password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:padding="20dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/enter_email_to_get_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <EditText
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ThemeEditText"
                    android:hint="@string/email"
                    android:padding="15dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/btnChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send_password"
                android:textColor="@color/white" />

        </LinearLayout>
</LinearLayout>
