<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <include layout="@layout/bottom_choose_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgAvatar"
                            android:layout_width="60dp"
                            android:layout_height="60dp" />
                        <TextView
                            android:paddingLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:id="@+id/tvName"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/email" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:gravity="right"
                            android:singleLine="true"
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorBackGroundInfoMain"
                            android:padding="5dp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/input_message" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtMessage"
                            style="@style/ThemeEditText"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorBackGroundInfoMain"
                            android:gravity="top|right"
                            android:inputType="textMultiLine"
                            android:lines="8"
                            android:maxLines="10"
                            android:minLines="6"
                            android:padding="15dp"
                            android:scrollbars="vertical" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/btn_save"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white" />
</android.support.design.widget.CoordinatorLayout>



